--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -3,10 +3,38 @@ $pastel : #cec0d6;
 
 $fond :#fffdf0;
 
+*, ::before, ::after{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 html, body{
   margin: 0;
   height: 100%;
   width: 100%;
+}
+
+/* Works on Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: $pastel $fond;
+}
+
+/* Works on Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  background: $fond;
+  border: 3px solid $pastel;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $pastel;
+  border-radius: 20px;
+  
 }
 
 
@@ -27,6 +55,7 @@ html, body{
 }
 
 .main{
+  
   grid-area: 2 / 2 / 3 / 3;
   margin-top: 2em;
   margin-bottom: 2em;
@@ -60,6 +89,9 @@ html, body{
   grid-area: 3 / 2 / 4 / 3;
   font-family: 'Hind Siliguri', sans-serif;
   display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 100%;
   align-items: center;
   position: relative;
   a{
@@ -158,17 +190,21 @@ html, body{
   padding: 0;
   text-align: left;
   border-top: solid 3px black;
+  border-right:solid 3px black ;
+  box-shadow: 0px 4px 3px rgba(0, 0, 0, 0.1);
+  border-radius: 0 15px 0 0 ;
   font-family: 'Karla', sans-serif;
   font-size: 1.25em;
   font-weight: bold;
   position: relative;
+  overflow: hidden;
 }
 
 .accordionTitle{
   margin-bottom: 5px;
   position: absolute;
   left: 5px;
-  top: -5px;
+  top: 15px;
 }
 
 .accordion:hover{
@@ -186,21 +222,19 @@ html, body{
   transition: transform 0.35s ease-out;
   transform-origin: bottom right;
   transform: scaleX(0);
-  z-index: 0;
 }
 .accordion:hover:before { 
   transform: scaleX(1);
   transform-origin: bottom left; 
-  z-index: 0;
 }
 
 .accordion:after {
   content: '+';
   color: black;
-  margin-right: 5px;
+  margin-right: 15px;
   display: block;
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   right: 0;
 }
 
@@ -209,11 +243,15 @@ html, body{
 }
 
 .panel {
+  margin-top: 1em;
   padding: 0;
   margin-bottom: 2em;
   background-color: $fond;
   max-height: 0;
   overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  transition: max-height 0.35s ease-out;
+  
 }
+
+
 
